--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -33,3 +33,6 @@ spring.jackson.time-zone=America/Los_Angeles
 server.error.whitelabel.enabled=false
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+
+#local.run.db=h2
+local.run.db=postgresql
